fix grade-input-edit-page layout bug

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,3 +45,7 @@ th {
   bottom: 5rem !important;
   z-index: 5000 !important;
 }
+
+.grade-level-select .v-input__control {
+  width: 150px !important;
+}
